syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "io.grpc.services.room";
option java_outer_classname = "RoomProto";

package room;

service RoomManager {
    rpc ListRooms(google.protobuf.Empty) returns (stream SummaryRoomInfo);
    rpc CreateRoom(CreateRoomRequest) returns (CreatedRoom);
    rpc DeleteRoom(DeleteRoomRequest) returns (google.protobuf.Empty);
    rpc WatchRoomInfo(RoomInfoRequest) returns (stream Room);
    rpc ChangeRoomSettings(ChangeRoomSettingsRequest) returns (google.protobuf.Empty);
}

service RoomUserManager {
    rpc JoinRoom(JoinRoomRequest) returns (google.protobuf.Empty);
    // rpc GetUsers(google.protobuf.Empty) returns (stream RoomUser);
    rpc LeaveRoom(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message CreatedRoom {
    int64 id = 1;
}

message RoomInfoRequest {
    uint64 id = 1;
}

message ChangeRoomSettingsRequest {
    uint64 id = 1;
    RoomSettings settings = 2;
}

message CreateRoomRequest { 
    string room_name = 1;
    MaxRoomSize max_size = 2;
    string owner_name = 3;
}

message DeleteRoomRequest {
    uint64 id = 1;
}

message JoinRoomRequest {
    uint64 id = 1;
}

message RoomSettings {
    uint32 max_score = 1;
    uint32 ball_spped = 2;
    uint32 paddle_speed = 3;
}

enum MaxRoomSize {
    DOUBLE_PLAYERS = 0;
    QUADRUPLE_PLAYERS = 1;
}

message RoomUserList {
    repeated RoomUser users = 1;
}

message UserList {
    repeated RoomUser users = 1;
}

message RoomList {
    repeated Room rooms = 1;
}

message RoomUser {
    string student_id = 1;
    string username = 2;
}

message SummaryRoomInfo {
    int64 id = 1;
    string name = 2;
    MaxRoomSize max_size = 3;
}

message Room {
    int64 id = 1;
    string name = 2;
    MaxRoomSize max_size = 3;
    RoomUser owner = 4;
    RoomUserList members = 5;
    RoomSettings settings = 6;
}